--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+            "@tailwindcss/typography": "^0.5.16",
+                 "tailwindcss": "^3.4.17"
   }
 }
