--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "bcryptjs": "^3.0.3",
+    "embla-carousel-react": "^8.6.0",
+    "idb": "^8.0.3",
+    "jose": "^6.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
+    "mongoose": "^8.19.3",
+    "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-hook-form": "^7.66.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-            "@tailwindcss/typography": "^0.5.16",
-                 "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17"
   }
 }
